refactor: refund env variables